--- a/static/public/manifest.json
+++ b/static/public/manifest.json
@@ -1,17 +1,25 @@
 {
-	"short_name": "ETHFaucet",
-	"name": "Ethereum Faucet",
-	"icons": [{
-		"src": "images/android/android-launchericon-192-192.png",
-		"sizes": "192x192",
-		"type": "image/png"
-	}, {
-		"src": "images/android/android-launchericon-512-512.png",
-		"sizes": "512x512",
-		"type": "image/png"
-	}],
-	"start_url": "./index.html",
-	"display": "standalone",
-	"theme_color": "#003300",
-	"background_color": "#aabbaa"
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
